--- a/project2/style.css
+++ b/project2/style.css
@@ -38,3 +38,49 @@ html, body{
     right: 20px;
     z-index: 2;
 }
+
+#one {
+top:-100px;
+left:-100px;
+background-image: url(imgs/1.jpg);
+height: 200px;
+width: 200px;
+position: fixed;
+      background-size: contain;
+            background-repeat: no-repeat;
+}
+    
+    #two {
+top:-100px;
+left:-100px;
+height: 200px;
+width: 200px;
+background-image: url(imgs/2.jpg);
+position: fixed;
+          background-size: contain;
+            background-repeat: no-repeat;
+}
+    
+    
+        #four {
+top:-100px;
+left:-100px;
+height: 100px;
+width: 100px;
+background-image: url(imgs/4.jpg);
+position: fixed;
+          background-size: contain;
+            background-repeat: no-repeat;
+}
+    
+        #five {
+top:-100px;
+left:-100px;
+height: 500px;
+width: 500px;
+background-image: url(imgs/5.jpg);
+position: fixed;
+          background-size: contain;
+            background-repeat: no-repeat;
+}
+    
