--- a/project2/style.css
+++ b/project2/style.css
@@ -50,6 +50,18 @@ position: fixed;
             background-repeat: no-repeat;
     pointer-events: none;
 }
+
+#three {
+top:-100px;
+left:-100px;
+background-image: url(imgs/3.jpg);
+height: 200px;
+width: 200px;
+position: fixed;
+      background-size: contain;
+            background-repeat: no-repeat;
+    pointer-events: none;
+}
     
     #two {
 top:-100px;
