--- a/project2/style.css
+++ b/project2/style.css
@@ -15,9 +15,9 @@ html, body{
     filter: FlipH;
 }
 #camera--trigger{
-    width: 200px;
-    background-color: black;
-    color: white;
+    width: 10px;
+    background-color: transparent;
+    color: transparent;
     font-size: 16px;
     border-radius: 30px;
     border: none;
@@ -26,7 +26,7 @@ html, body{
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
     position: fixed;
     bottom: 30px;
-    left: calc(50% - 100px);
+    left: calc(50% - 10px);
 }
 .taken{
     height: 100px!important;
